styles.css
body{
    background-color: rgb(255, 255, 255);
    font-family: 'Tillana', cursive;
}

main{
    text-align: center;
    margin: 0 auto;
    height: 100vh;
    max-width: 375px;
    border: 1px black solid;

}

h1{
    font-size: 2rem;
    text-decoration: underline;
}

h2{
    font-size: 1.1rem;
}

label{
    font-size: 1.2rem;
}

button{
    width: 155px;
    height: 50px;
    font-size: 1.3rem;
    margin-top: 10px;
    margin-bottom: 10px;
    border-radius: 10px;
    border: 1px black solid;
}

#length{
    width: 325px;
}

#password{
    width: 350px;
    height: 50px;
    text-align: center;
    font-size: 1.3rem;
    border-radius: 10px;
    border: 1px black solid;
    margin-bottom: 10px;
}



#settings{
    background-color: rgb(202, 199, 199);
    width: 340px;
    margin: 0 auto;
    border: none;
    border-radius: 10px;
    padding: 10px;
}

